[package]
name = "route-optimizer-core"
version = "0.3.0"
authors = ["ParkSnoopy <117149837+ParkSnoopy@users.noreply.github.com>"]
edition = "2021"
license = "AGPL-3.0"

[profile.release]
panic = "abort"
strip = true
lto   = true

[dependencies]
ansi-escapes = "0.2.0"
nu-ansi-term = "0.50.1"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
itertools = "0.13.0"
reqwest = { version = "0.12.9", features = ["cookies", "default-tls"] }
scraper = "0.21.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
derive_more = { version = "1.0.0", features = ["into_iterator"] }
color-eyre = "0.6.3"
factorial = "0.4.0"
rayon = "1.10.0"
terminal_size = "0.4.0"
